# enso-launcher-continued

./: .envrc  .gitattributes  .gitignore  .project  .pydevproject  README  README.linux  README.md  README.win32  SConstruct.win32  VERSION  cmdline.cmd  pyproject.toml  requirements.common  requirements.linux  run.cmd  run_enso.sh
enso/: .gitignore  __init__.py  _version_local.py  _version_remote.py  cairo.py  clipboard.py  config.py  events.py  plugins.py  providers.py  selection.py  system.py  version.py  webui.py
enso/commands/: __init__.py  decorators.py  factories.py  interfaces.py  manager.py  mixins.py  suggestions.py
enso/commands/suggestions_cache/: manager.py
enso/config/: __init__.py  defaults.py
enso/contrib/: evaluate.py  google.py  help.py  minimessages.py  recentresults.py  websearch.py
enso/contrib/calc/: __init__.py  calc.py  currconv.py  exchangerates_updater.py  fourfn.py  geoip.py  googlecalc.py  ipgetter.py  text2num.py
enso/contrib/open/: __init__.py  dirwatcher.py  interfaces.py  shortcuts.py  utils.py
enso/contrib/platform/: __init__.py
enso/contrib/scriptotron/: __init__.py  adapters.py  cmdretriever.py  concurrency.py  ensoapi.py  events.py  tracebacks.py  tracker.py
enso/graphics/: __init__.py  font.py  measurement.py  rounded_rect.py  textlayout.py  transparentwindow.py  xmltextlayout.py
enso/input/: __init__.py
enso/messages/: __init__.py  miniwindows.py  primarywindow.py  windows.py
enso/net/: __init__.py  inetcache.py  location.py  ping.py
enso/platform/: __init__.py
enso/platform/linux/: CharMaps.py  __init__.py  graphics.py  input.py  nautilus_extension.py  scriptfolder.py  selection.py  setup.py  utils.py  weaklib.py
enso/platform/osx/: __init__.py  (+2 more)
enso/quasimode/: __init__.py  layout.py  linewindows.py  parametersuggestionlist.py  suggestionlist.py  window.py
enso/utils/: __init__.py  decorators.py  html_tools.py  memoize.py  strings.py  xml_tools.py
scripts/: .gitignore  run_enso.py  test_longest_match.py
test/commands/: test_manager.py
tests/: test_strings.py  test_xml_tools.py
(+193 files in other folders)
