[tool.poetry]
name = "enso-launcher-continued"
version = "0.1.0"
description = ""
authors = ["Pavel Vitis (blackdaemon) <pavelvitis@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
contextlib2 = "^0.5.5"
ujson = "^1.35"
six = "^1.12"
urllib3 = "^1.25"
iniparse = "^0.4.0"
lxml = "^4.3"
httplib2 = "^0.12.3"
python-dateutil = "^2.8"
watchdog = "^0.9.0"
pyparsing = "^2.4"
click = "^7.0"
shutilwhich = "^1.1"

"backports.functools_lru_cache" = { version = "^1.5", python = "~2.7" }

pywin32 = { version = "^224.0", platform = "win32" }
pywinauto = { version = "^0.6.6", platform = "win32" }

[tool.poetry.dev-dependencies]
Nuitka = "^0.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
